--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 <br>
 <button class="btn btn-dark"  routerLink="/addpost">Add a requirement for peeps on the bench</button>{{"  "}}
 <button class="btn btn-dark"  routerLink="/about">About</button>{{"  "}}
-<button class="btn btn-dark"  routerLink="/post">Show Post</button>
+<button class="btn btn-dark"  routerLink="/post">Show Post</button>{{"  "}}
+<button class="btn btn-dark"  routerLink="/addreactiveway">Add Post in a Reactive way</button>
 <br>
 
 <router-outlet></router-outlet>
